--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,7 +7,23 @@
 
 <body>
     <h1>管理者用ページ</h1>
+    <table>
+        <tr>
+            <td>利用者の本日の報告確認</td>
+            <td><button onclick="location.href='sample.html'">確認</button></td>
+        </tr>
+        <tr>
+            <td>利用者の報告確認</td>
+            <td><button onclick="location.href='sample.html'">確認</button></td>
+        </tr>
+        <tr>
+            <td>利用者の報告編集</td>
+            <td><button onclick="location.href='sample.html'">確認</button></td>
+        </tr>
+        <tr>
+            <td>利用者の報告忘れ確認</td>
+            <td><button onclick="location.href='sample.html'">確認</button></td>
+        </tr>
 
-    
 </body>
 </html>
