--- a/templates/todayReport.html
+++ b/templates/todayReport.html
@@ -6,8 +6,6 @@
 </head>
 
 <body>
-    <h1>DB2025</h1>
-    <p>Welcome to the DB2025 project!</p>
-    <p>This is a sample HTML page.</p>
+    <h1>todayReport</h1>
 </body>
 </html>
