--- a/templates/login.html
+++ b/templates/login.html
@@ -28,10 +28,11 @@
         個人番号<br>
         <input type="text" name="P_num" required><br><br>
         パスワード<br>
-        <input type="text" name="pass" required><br>
+        <input type="text" name="pass" required><br><br>
         <input type="submit" value="ログイン">
     </form>
-    <button onclick="location.href='/templates/sign_up.html'"></button><br>
+    <!-- <button onclick="location.href='sign_up.html'">新規登録</button><br> -->
+    <p><a href="/sign_up_page">新規登録</a></p>
     <p><a href="/top">トップページに戻る</a></p>
 </body>
 </html>
