パスワード変更用のページを追加

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -30,13 +30,13 @@
         名前<br>
         <input type="text" name="f_name" required><br><br>
         所属<br>
-        <input type="text" name="affiliation"><br><br>
+        <input type="text" name="affiliation" required><br><br>
         電話番号<br>
-        <input type="text" name="tell"><br><br>
+        <input type="text" name="tell" required><br><br>
         メールアドレス<br>
-        <input type="text" name="mail"><br><br>
+        <input type="text" name="mail" required><br><br>
         住所<br>
-        <input type="text" name="addr"><br><br>
+        <input type="text" name="addr" required><br><br>
         パスワード<br>
         <input type="text" name="pass" required><br><br>
 
