--- a/templates/top.html
+++ b/templates/top.html
@@ -16,7 +16,7 @@
         <li><a href="/report">コロナ報告用ページ</a></li>
         <li><a href="/admin">管理者用ページ</a></li>
     </ul>
-    <div><a href="/logout">ログアウト</a>　<a href="/sign_up_page">新規利用者登録</a></div>
+    <div><a href="/logout">ログアウト</a>　<a href="/sign_up_page">新規利用者登録</a>　<a href="/change_pass">パスワード変更</a></div>
 
 </body>
 </html>
