--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td>利用者の本日の報告確認</td>
-            <td><button onclick="location.href='sample.html'">確認</button></td>
+            <td><button onclick="location.href='adomin_today_report.html'">確認</button></td>
         </tr>
         <tr>
             <td>利用者の報告確認</td>
