パスワードを忘れた場合のページを追加

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -38,7 +38,7 @@
         住所<br>
         <input type="text" name="addr" required><br><br>
         パスワード<br>
-        <input type="text" name="pass" required><br><br>
+        <input type="password" name="pass" required><br><br>
 
         <input type="submit" value="登録"><br>
     </form>
