--- a/templates/login.html
+++ b/templates/login.html
@@ -28,11 +28,12 @@
         個人番号<br>
         <input type="text" name="P_num" required><br><br>
         パスワード<br>
-        <input type="text" name="pass" required><br><br>
+        <input type="password" name="pass" required><br><br>
         <input type="submit" value="ログイン">
     </form>
     <!-- <button onclick="location.href='sign_up.html'">新規登録</button><br> -->
     <p><a href="/sign_up_page">新規登録</a></p>
+    <p><a href="/forget_pass">パスワードを忘れた場合はこちら</a></p>
     <p><a href="/top">トップページに戻る</a></p>
 </body>
 </html>
