--- a/templates/UserUpdate_complete.html
+++ b/templates/UserUpdate_complete.html
@@ -1,2 +1,11 @@
-<h1>更新が完了しました！</h1>
-<a href="{{ url_for('top') }}">トップページに戻る</a>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>更新完了</title>
+</head>
+<body>
+    <h1>更新が完了しました！</h1>
+    <a href="{{ url_for('top') }}">トップページへ戻る</a>
+</body>
+</html>
