--- a/templates/top.html
+++ b/templates/top.html
@@ -13,7 +13,7 @@
         <li><a href="/condition_input">体調観察入力</a></li>
         <li><a href="/condition_view">体調記録閲覧</a></li>
         <li><a href="/user_update">利用者情報修正ページ</a></li>
-        <li><a href="/report">コロナ報告用ページ</a></li>
+        <li><a href="/covid_report">コロナ報告用ページ</a></li>
         <li><a href="/admin">管理者用ページ</a></li>
     </ul>
     <div><a href="/logout">ログアウト</a>　<a href="/sign_up_page">新規利用者登録</a>　<a href="/change_pass">パスワード変更</a></div>
