行動記録入力_改善

--- a/templates/action_done.html
+++ b/templates/action_done.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>記録が完了しました</h1>
-    <a href="{{ url_for('index') }}">トップページへ戻る</a>
+    <a href="{{ url_for('top') }}">トップページへ戻る</a>
 </body>
 </html>
