--- a/templates/condition_done.html
+++ b/templates/condition_done.html
@@ -29,6 +29,6 @@
 </head>
 <body>
     <h1>体調記録を保存しました！</h1>
-    <a href="{{ url_for('index') }}">トップページに戻る</a>
+    <a href="{{ url_for('top') }}">トップページに戻る</a>
 </body>
 </html>
